syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "HelloWorldProto";

package io.quarkus.qe.grpc;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHi (HiRequest) returns (HiReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// The request message containing the user's name.
message HiRequest {
  string name = 1;
}

// The response message containing the greetings
message HiReply {
  string message = 1;
  string principalName = 2;
}
